--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,7 @@
     </IfModule>
 
     RewriteEngine On
+    RewriteBase /de/
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
@@ -12,6 +13,12 @@
     # Handle X-XSRF-Token Header
     RewriteCond %{HTTP:x-xsrf-token} .
     RewriteRule .* - [E=HTTP_X_XSRF_TOKEN:%{HTTP:X-XSRF-Token}]
+
+    # --- Strip /index.php from URLs (preserve query strings) ---
+    # /de/index.php/foo?bar=1  ->  /de/foo?bar=1
+    # /de/index.php            ->  /de/
+    RewriteCond %{THE_REQUEST} \s/index\.php[?/\s] [NC]
+    RewriteRule ^index\.php(?:/(.*))?$ /de/$1 [R=301,L]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
